tests/ui/lazy-boolean-expressions/lazy-boolean-types.stderr
error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:13:13
   |
LL |     assert!(1 && 1); 
   |             ^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:13:18
   |
LL |     assert!(1 && 1); 
   |                  ^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:14:13
   |
LL |     assert!(1.5 && 1.5); 
   |             ^^^ expected `bool`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:14:20
   |
LL |     assert!(1.5 && 1.5); 
   |                    ^^^ expected `bool`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:15:13
   |
LL |     assert!(1.5 && 1); 
   |             ^^^ expected `bool`, found floating-point number

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:15:20
   |
LL |     assert!(1.5 && 1); 
   |                    ^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:16:22
   |
LL |     assert!(false && 1); 
   |             -----    ^ expected `bool`, found integer
   |             |
   |             expected because this is `bool`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:17:13
   |
LL |     assert!('a' && 'b'); 
   |             ^^^ expected `bool`, found `char`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:17:20
   |
LL |     assert!('a' && 'b'); 
   |                    ^^^ expected `bool`, found `char`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:18:13
   |
LL |     assert!('a' || true); 
   |             ^^^ expected `bool`, found `char`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:19:13
   |
LL |     assert!("alpha" && "beta"); 
   |             ^^^^^^^ expected `bool`, found `&str`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:19:24
   |
LL |     assert!("alpha" && "beta"); 
   |                        ^^^^^^ expected `bool`, found `&str`

error[E0308]: mismatched types
  --> $DIR/lazy-boolean-types.rs:20:13
   |
LL |     assert!("alpha" || true); 
   |             ^^^^^^^ expected `bool`, found `&str`

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0308`.
